# 2D-Game

./: Cargo.toml  README.md  rust_game_codex_requirements.txt
.cargo/: config.toml
.cargo_home/: .global-cache
assets/configs/: boss.ron  enemies.ron  game_balance.ron  player.ron  rewards.ron  rooms.ron
saves/: run_save.ron
src/: app.rs  constants.rs  main.rs  prelude.rs  states.rs
src/coop/: components.rs  host.rs  hud.rs  mod.rs  net.rs  ui.rs
src/core/: achievements.rs  assets.rs  audio.rs  camera.rs  events.rs  input.rs  mod.rs  save.rs
src/data/: definitions.rs  loaders.rs  mod.rs  registry.rs
src/gameplay/: mod.rs
src/gameplay/combat/: components.rs  damage.rs  hitbox.rs  mod.rs  projectiles.rs  systems.rs
src/gameplay/effects/: afterimage.rs  damage_numbers.rs  flash.rs  mod.rs  particles.rs  screen_shake.rs
src/gameplay/enemy/: ai.rs  boss.rs  components.rs  mod.rs  spawner.rs  systems.rs
src/gameplay/map/: doors.rs  generator.rs  mod.rs  room.rs  tiles.rs  transitions.rs
src/gameplay/player/: animation.rs  combat.rs  combo.rs  components.rs  dash.rs  mod.rs  skills.rs  systems.rs
src/gameplay/progression/: difficulty.rs  floor.rs  mod.rs  stats.rs
src/gameplay/puzzle/: mod.rs  pressure_plate.rs  switch_order.rs  trap.rs
src/gameplay/rewards/: apply.rs  data.rs  mod.rs  (+1 more)
src/pvp/: components.rs  mod.rs  net.rs  systems.rs  ui.rs
src/ui/: game_over.rs  hud.rs  menu.rs  mod.rs  notifications.rs  pause.rs  reward_select.rs  shop.rs  widgets.rs
src/utils/: collision.rs  easing.rs  entity.rs  math.rs  mod.rs  rng.rs  timers.rs
(+448 files in other folders)
