[package]
name = "echoes_in_the_fog"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bevy = "0.14"
bevy_kira_audio = { version = "0.20", features = ["ogg", "wav"] }
bevy_rapier2d = "0.27"
rand = "0.8"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
